--- a/Learning_Data_Science_Manuscsript.rmd
+++ b/Learning_Data_Science_Manuscsript.rmd
@@ -7,7 +7,7 @@ tags:
   - galactic dynamics
   - milky way
 authors:
-  - name: Adrian M. Price-Whelan
+  - name: Ben Rush
     orcid: 0000-0003-0872-7098
     affiliation: "1, 2" # (Multiple affiliations must be quoted)
   - name: Author Without ORCID
