--- a/Learning_Data_Science_Manuscsript.rmd
+++ b/Learning_Data_Science_Manuscsript.rmd
@@ -93,14 +93,14 @@ can be navigated to from the home page. The lessons are as follows:
 | What goes up must go down, or up, or nowhere | Correlations |
 | With great power comes maybe good effect size | Statistics in the real world |
 
-## Learning objectives
-
-
-## Activities & Media
-mix here
+ ## Learning objectives
+For a list of specific learning objectives by lesson, visit this [page](https://benrushscience.github.io/learning-data-science/lecture-notes/learning-objectives.html).
 
 # Active Script Learning via PonderStats
-
+We created an R script that accompanies the website. The script is designed to be used by students to follow along with the lessons and so
+they can create similar data and figures as those featured on the website. The script is sectioned according to the website lessons and
+states what will be learned in each section. The script is designed to be used by students who have no prior experience with R. The script
+can be found [here](https://github.com/benrushscience/learning-data-science/blob/main/code/PonderStats_script.R).
 
 # eligibility for JOSE (think software instruction and web content, Multimedia, etc)
 teachers for learning goals,
@@ -113,28 +113,7 @@ feedback from instructors and teachers?
 
 
 
-############################## Example paper ################################33
-
-The forces on stars, galaxies, and dark matter under external gravitational
-fields lead to the dynamical evolution of structures in the universe. The orbits
-of these bodies are therefore key to understanding the formation, history, and
-future state of galaxies. The field of "galactic dynamics," which aims to model
-the gravitating components of galaxies to study their structure and evolution,
-is now well-established, commonly taught, and frequently used in astronomy.
-Aside from toy problems and demonstrations, the majority of problems require
-efficient numerical tools, many of which require the same base code (e.g., for
-performing numerical orbit integration).
-
-``Gala`` is an Astropy-affiliated Python package for galactic dynamics. Python
-enables wrapping low-level languages (e.g., C) for speed without losing
-flexibility or ease-of-use in the user-interface. The API for ``Gala`` was
-designed to provide a class-based and user-friendly interface to fast (C or
-Cython-optimized) implementations of common operations such as gravitational
-potential and force evaluation, orbit integration, dynamical transformations,
-and chaos indicators for nonlinear dynamics. ``Gala`` also relies heavily on and
-interfaces well with the implementations of physical units and astronomical
-coordinate systems in the ``Astropy`` package [@astropy] (``astropy.units`` and
-``astropy.coordinates``).
+############################## Example paper paragraph ################################33
 
 ``Gala`` was designed to be used by both astronomical researchers and by
 students in courses on gravitational dynamics or astronomy. It has already been
@@ -147,14 +126,14 @@ scientific explorations of forthcoming data releases from the *Gaia* mission
 
 # Mathematics
 
-Single dollars ($) are required for inline mathematics e.g. $f(x) = e^{\pi/x}$
+<!-- Single dollars ($) are required for inline mathematics e.g. $f(x) = e^{\pi/x}$
 
 Double dollars make self-standing equations:
 
 $$\Theta(x) = \left\{\begin{array}{l}
 0\textrm{ if } x < 0\cr
 1\textrm{ else}
-\end{array}\right.$$
+\end{array}\right.$$ -->
 
 
 # Citations
@@ -170,11 +149,11 @@ For a quick reference, the following citation commands can be used:
 
 # Figures
 
-Figures can be included like this: ![Example figure.](figure.png)
+<!-- Website photos? -->
 
 # Acknowledgements
 
-We acknowledge contributions from Brigitta Sipocz, Syrtis Major, and Semyeong
-Oh, and support from Kathryn Johnston during the genesis of this project.
+We acknowledge contributions the feedback from Hedi Lauffer, Hailey Louw, Reed Nelson, Sungsik Kong, Mengze Tang, Evan Gorstein,
+Xudong Tang, Yibo Kong, Nathan Kolbow, Yunju Ha, Tianyi Xu, and Rosa Aghdam.
 
 # References
