--- a/Manuscript/Learning_Data_Science_Manuscsript.rmd
+++ b/Manuscript/Learning_Data_Science_Manuscsript.rmd
@@ -47,30 +47,33 @@ bibliography: paper.bib
 # Summary
 We created a website for containing intrductory statistics learning materials accompanied by engaging media and R scripts that students can use. 
 The website and scripts are designed to mirror an introductory course to statistics and tie it to serveral realworld
-examples, like genetic diversity. The website, which is hosted on GitHub pages, starts with an introduction that
-middle school, high school, and undergraduate students can grasp- the diversity of dog breeds. We introduce the 
+examples, like genetic diversity. Similar to other education materials aimed at students in grade school (Thompson and Arastapoor), the website, 
+which is hosted on GitHub pages, starts with an introduction that
+middle school and high school students can grasp- the diversity of dog breeds. We introduce the 
 character of Rhonda, a tall female golden retriever. We lead readers through the thinking "how do we actually know Rhonda
 is tall?". We lead readers through comparisons of Rhonda to other golden retreivers based on personal observations, defining
-a metric of "tallness", ie height, comparing Rhonda to other golden retreivers (z-score introduction), and eventually other 
-bog breeds (for t-tests, ANOVAs, correlations, and beyond). We lead the readers through these concepts all while providing
+a metric of "tallness", ie height, types of variables, comparing Rhonda to other golden retreivers (z-score introduction), and eventually other 
+bog breeds (for t-tests, ANOVAs, correlations, and beyond), which help lay the foundation for statistics and data science for students (Chittora and Baynes). 
+We lead the readers through these concepts all while providing
 humorous examples and comments, links for further learning, RShiny Apps for readers to learn experientially, visuals, embedded 
 videos, and the scripts for students to follow along. In total, readers have access to 11 different lessons to learn about 
 introductory statistics and data science at their own pace.
 
 # Statement of Need
 In our experience, the introduction to statistics and data science rely heavily on the mathematical
-formulas instead of the versatile and useful applications of these formulas. In fact, one of the authors 
+formulas instead of the applications of these formulas and without a humanist perspective to student learning (Victor Lee). In fact, one of the authors 
 struggled in calculus because the applications to the realworld seemed extremely distant. He stopped taking
 math classes until forced to take statistics to complete his undergraduate degree. Despite his hesitation,
 he fell in love with statistics and absorbed all of the information possible. The authors hope that 
 this website might be able to connect with and inspire younger learners to pursue the applied mathematics
 fields of statistics and data science. The website and open scripts are aimed to be fun, engaging, and a mix 
 of media that focus on why these fields are important for individual decision making and how they can be 
-potential career paths as well. The option to delve further into the formulas in statics are available, but the
+potential career paths as well. The option to delve further into the formulas in statics are available which can encourage learning (Victor Lee), but the
 interpretations of statistical tests to realworld applications are prioritized. Rshiny apps and the code that
 generated many of the figures are available for students to interact with. We believe this website and script can
-serve to provide an intriguing first encounter with statistics and data scientists, especially for those students
-who might be conditioned to be math averse.
+serve to provide an intriguing first encounter with statistics and data scientists in a relevant way (Weiland and Williams), especially for those students
+who might be conditioned to be math averse. We also plan to expand the website to include more topics on data science
+and machine learning, which seem possible to be introduced to younger students (Sanusi)
 
 # Website description
 The website provides an introduction to statistics and data science for middle school, high school, and undergraduate students. 
@@ -93,7 +96,7 @@ can be navigated to from the home page. The lessons are as follows:
 | What goes up must go down, or up, or nowhere | Correlations |
 | With great power comes maybe good effect size | Statistics in the real world |
 
- ## Learning objectives
+## Learning objectives
 For a list of specific learning objectives by lesson, visit this [page](https://benrushscience.github.io/learning-data-science/lecture-notes/learning-objectives.html).
 
 # Active Script Learning via PonderStats
@@ -137,6 +140,8 @@ $$\Theta(x) = \left\{\begin{array}{l}
 
 
 # Citations
+
+Thompson and Arastapoor Data detectives
 
 Citations to entries in paper.bib should be in
 [rMarkdown](http://rmarkdown.rstudio.com/authoring_bibliographies_and_citations.html)
